--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "express": "^4.16.4"
   },
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
